--- a/index.htm
+++ b/index.htm
@@ -1,20 +1,100 @@
-<html>
+<!DOCTYPE HTML>
+<html lang="en-IN">
 
-<style>
-.loader{
-   width:80px;
-   height: 80px;
-   border-radius:100%;
-   border:100px solid;
-   border-color: blue red green yellow  ;
-   animation: 1.5s ;
-   padding:10px;
-}
-</style>
-<body>
-    <div class="loader">
-        <button type="button" onclick="document.getElementById('demo').innerHTML='microsoft'" >Google</button>
-        <p id="demo" ">zomato</p>
-    </div>
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="keywords" content="rising sun,RISING SUN">
+
+
+<head>
+  <title>login page</title>
+</head>
+<h1 STYLE="color:white;background-color:#371BB1;TEXT-ALIGN:CENTER;FONT-SIZE:40PX;">RISING SUN</H1>
+<hr width="80%">
+<body style="text-align:center;background-color:#f5f5f5;
+">
+
+      <h2 >Enter Your Login Details</h2>
+      <div>
+        <form>
+         <label for="user-name" >username</label>
+            <input type="text" name="signin" placeholder="enter name" required  />  <br>
+         <label for="password">Password</label>
+            <input type="password" name="signin" placeholder="enter password" required  />
+             <br><br>  <button style="background-color:lightgreen;">SignIn</button>
+       </form>
+       <br>
+      </div>
+      <p>Dont have an account....</p>
+      <button><a href="https://sites.google.com/rmkcet.ac.in/rising-sun " style="color:blue;">click here</a></button>
+
+      <div style="text-align:center display:block;">
+           <h1 >Create a new account</h1>
+           <h4 >It's quick and easy.</h4>
+           <form action="">
+               <label for="username">username:</label>
+                   <input type="text" name="signup" placeholder="first name" requird> <br>
+               <label for="surname">surname: </label>
+                   <input type="text" name="signup" placeholder="surname" requird> <br>
+               <label for="gender" required>Gender:</label>
+                   <input type="radio" name="signup" requird> Male  </input>
+                   <input type="radio" name="signup" requird> Female </input>
+                   <input type="radio" name="signup" requird> Other </input>  <br>
+
+                       <label for="birthday">DOB:</label>
+                       <select name="day" >
+                           <option value=" ">  day </option>
+                           <option value="0">0</option>
+                           <option value="1">1</option>
+                           <option value="2">2</option>
+                           <option value="3">3</option>
+                           <option value="4">4</option>
+                           <option value="5">5</option>
+                           <option value="6">6</option>
+                           <option value="7">7</option>
+                           <option value="8">8</option>
+                           <option value="9">9</option>
+                           <option value="10">10</option></option>
+
+                         </select>
+                       <select name="month" >
+                           <option value=" ">month  </option>
+                           <option value="jan">January</option>
+                           <option value="feb">February</option>
+                           <option value="mar">March</option>
+                           <option value="apr">April</option>
+                           <option value="may">May</option>
+                           <option value="june">June</option>
+                           <option value="july">July</option>
+                           <option value="aug">August</option>
+                           <option value="sep">September</option>
+                           <option value="oct">October</option>
+                           <option value="Nov">November</option>
+                            <option value="dec">December</option>
+                       </select>
+                       <select name="year" >
+                           <option value="year">year  </option>
+                           <option value="1999">1999 </option>
+                       </select>
+<form>
+<input type="date">date</input>
+</form>
+                  <br>
+               <label for="gmail">Gmail:</label>
+                   <input type="email" name="signup" placeholder="xyz@gmail.com" requird>   </input><br>
+               <label for="mobile number">Mobile Number:</label>
+                   <input type="text" name="signup" placeholder="0123456789" requird>   </input> <br>
+               <label for="password">Password:</label>
+                   <input type="password" name="signup" placeholder="ex:Hi@123" requird>   </input> <br>
+                   <label for="conditios"></label>
+                   <input type="checkbox" /> i agree to all the conditions*</input>  <br>
+               <button type="submit" style="background-color:lightgreen;">SignUp</button>
+
+
+
+           </form>
+      </div>
+ <div
+ <footer>copyrights@risingsun</footer>
 </body>
 </html>
