--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+  <img src="https://drive.google.com/file/d/1flHFXOrXYx3XPDKIkY_ygbdBM1itD6a6/view?usp=sharing" alt="error" />
+  <hr>
 <div class="login-box">
   <h1>Login</h1>
   <div class="textbox">
@@ -18,7 +20,7 @@
     <input type="password" placeholder="Password">
   </div>
 
-  <input type="button" class="btn" value="Sign in">
+  <input type="button" class="button" value="Sign in">
 </div>
   </body>
 </html>
