--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-  <img src="https://drive.google.com/file/d/1flHFXOrXYx3XPDKIkY_ygbdBM1itD6a6/view?usp=sharing" alt="error" />
+  <img src="logo.jpeg" alt="error" width=40px height=40px />
   <hr>
 <div class="login-box">
   <h1>Login</h1>
