--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>my new login form</title>
     <link rel="stylesheet" href="style.css">
+    <script data-ad-client="ca-pub-8612687858419454" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   </head>
   <body>
   <img src="logo.jpeg" alt="error" width=40px height=40px />
   <hr>
+
 <div class="login-box">
   <h1>Login</h1>
   <div class="textbox">
